--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,14 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
+	testImplementation 'org.mockito:mockito-core:2.23.4'
+	testImplementation 'junit:junit:4.12'
+	
 	implementation 'io.springfox:springfox-swagger-ui:2.9.2'
 	implementation 'io.springfox:springfox-swagger2:2.9.2'
+
+	compile group: 'org.springframework.data', name: 'spring-data-jpa', version: '2.1.8.RELEASE'
+	
+	compile group: 'postgresql', name: 'postgresql', version: '9.0-801.jdbc4'
+
 }
