--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,8 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-freemarker'
 	testImplementation 'org.mockito:mockito-core:2.23.4'
 	testImplementation 'junit:junit:4.12'
 	
@@ -34,6 +35,7 @@ dependencies {
 
 	compile group: 'org.springframework.data', name: 'spring-data-jpa', version: '2.1.8.RELEASE'
 	
-	compile group: 'postgresql', name: 'postgresql', version: '9.0-801.jdbc4'
+	compile group: 'org.postgresql', name: 'postgresql', version: '42.2.5'
 
+	compile group: 'org.springframework.data', name: 'spring-data-releasetrain', version: 'Dijkstra-RELEASE', ext: 'pom'
 }
